[metadata]
name = repex-analysis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7



[options.entry_points]
console_scripts=
	write_batch_scripts = repex_analysis.write_batch_scripts:main
	rmsd = repex_analysis.rmsd:main
	
